@@ -1,3 +1,10 @@
+2016-??-?? Patrick Galbraith, Michiel Beijen, DBI/DBD community (4.035_03)
+* By mistake, when DBD::mysql was compiled against libmariadb, it
+  did not compile in SSL support.
+  Reported by Jitka Plesnikova @ Red Hat
+   (https://rt.cpan.org/Public/Bug/Display.html?id=116959)
+   (https://bugzilla.redhat.com/show_bug.cgi?id=1366773)
+
 2016-08-11 Patrick Galbraith, Michiel Beijen, DBI/DBD community (4.035_02)
 * Test 56connattr.t failed when run when performance schema is enabled, but
   tests were run as a user with limited permissions.
